--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,12 +14,16 @@
     background-color: black;
     position: relative;
     height: 100vh;
-    padding: 150px;
     z-index: 0;
+}
+
+.home {
+    padding: 150px;
 }
 
 .home__h1 {
     font-size: 84px;
+    font-weight: bold;
     text-transform: uppercase;
 }
 
@@ -44,7 +48,6 @@
     padding: 30px 40px;
     border-radius: 10px;
     background: linear-gradient(180deg, #AE0B0B 0%, #7D0808 100%);
-    position: relative;
 }
 
 .home__link {
@@ -74,4 +77,133 @@
     font-size: 12px;
     font-weight: 400;
     /* letter-spacing: 0.14px; */
+}
+
+.quiz1 {
+    padding: 75px;
+}
+
+.quiz1__h2 {
+    font-size: 64px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.quiz1__text {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.quiz1__img {
+    position: absolute;
+    right: 0;
+    top: -100px;
+    width: 100%;
+    z-index: -1;
+}
+
+.quiz1__container {
+    margin-top: 30px;
+    border-radius: 10px;
+    background: #fff;
+    padding: 0;
+}
+
+.progress {
+    border-radius: 10px 10px 0 0;
+    height: 10px;
+    display: flex;
+    background-color: #e9ecef;
+}
+
+.progress-bar {
+    border-radius: 10px 5px 5px 0;
+    background-color: #7D0808;
+    width: 25%;
+}
+
+.quiz1__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px 40px 40px;
+}
+
+.quiz1__question {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.quiz1__card {
+    width: 25%;
+    box-sizing: border-box;
+}
+
+.row {
+    --bs-gutter-x: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.row>* {
+    padding-right: 12px;
+    padding-left: 12px;
+    max-width: 100%;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row-cols-4>* {
+    flex: 0 0 auto;
+    width: 25%;
+}
+
+.quiz1__card-image {
+    border-radius: 10px;
+    width: 100%;
+    margin: 15px 0;
+    box-sizing: border-box;
+}
+
+.quiz1__card-image.selected, .quiz1__card-image:hover {
+    cursor: pointer;
+    border: 4px solid #AE0B0B;
+} */
+
+.quiz1__card-image::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    background-image: url('/resources/images/ellipse.svg');
+    z-index: 5;
+}
+
+.quiz1__caption {
+    color: #333;
+}
+
+.quiz1__button {
+    width: max-content;
+    margin: 10px auto 0;
+    padding: 12px 30px;
+    border-radius: 10px;
+    background: #ACACAC;
+    position: relative;
+}
+
+.quiz1__link {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 700;
+    /* letter-spacing: 0.18px; */
 }
