--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -71,11 +71,10 @@
 .home__ad-text {
     font-size: 12px;
     font-weight: 400;
-    /* letter-spacing: 0.14px; */
 }
 
 .quiz {
-    padding: 75px;
+    padding: 70px 200px;
 }
 
 .quiz__header {
@@ -134,6 +133,13 @@
     padding: 30px 40px 40px;
 }
 
+.quiz4__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px 300px 40px;
+}
+
 .quiz__question {
     font-size: 24px;
     font-weight: bold;
@@ -142,7 +148,7 @@
     margin-bottom: 15px;
 }
 
-.quiz1__card {
+.quiz__card {
     width: 25%;
     box-sizing: border-box;
 }
@@ -170,19 +176,24 @@
     width: 25%;
 }
 
-.quiz1__card-image {
+.row-cols-2>* {
+    flex: 0 0 auto;
+    width: 50%;
+}
+
+.quiz__card-image {
     border-radius: 10px;
     width: 100%;
     margin: 15px 0;
     box-sizing: border-box;
 }
 
-.quiz1__card-image.selected, .quiz1__card-image:hover {
+.quiz__card-image.selected, .quiz__card-image:hover {
     cursor: pointer;
     border: 4px solid #AE0B0B;
 } */
 
-.quiz1__card-image::after {
+.quiz__card-image::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -191,11 +202,11 @@
     z-index: 5;
 }
 
-.quiz1__caption {
+.quiz__caption {
     color: #333;
 }
 
-.quiz1__button {
+.quiz__button {
     width: max-content;
     margin: 10px auto 0;
     padding: 12px 30px;
@@ -204,7 +215,7 @@
     position: relative;
 }
 
-.quiz1__link {
+.quiz__link {
     text-decoration: none;
     font-size: 18px;
     font-weight: 700;
