--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -129,7 +129,7 @@
 .quiz1__inner {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     padding: 30px 40px 40px;
 }
 
@@ -148,75 +148,88 @@
     margin-bottom: 15px;
 }
 
-.quiz__card {
-    width: 25%;
-    box-sizing: border-box;
-}
-
-.row {
-    --bs-gutter-x: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.row>* {
-    padding-right: 12px;
-    padding-left: 12px;
-    max-width: 100%;
-}
-
-.col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.row-cols-4>* {
-    flex: 0 0 auto;
-    width: 25%;
-}
-
-.row-cols-2>* {
-    flex: 0 0 auto;
-    width: 50%;
-}
-
-.quiz__card-image {
-    border-radius: 10px;
-    width: 100%;
-    margin: 15px 0;
-    box-sizing: border-box;
-}
-
-.quiz__card-image.selected, .quiz__card-image:hover {
-    cursor: pointer;
-    outline: 4px solid #AE0B0B;
-} */
-
-.quiz__card-image::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    background-image: url('/resources/images/ellipse.svg');
-    z-index: 5;
-}
-
-.quiz__caption {
-    color: #333;
-}
-
 .quiz__button {
     width: max-content;
-    margin: 10px auto 0;
+    margin: 5px auto 0;
     padding: 12px 30px;
     border-radius: 10px;
     background: #ACACAC;
     position: relative;
 }
 
+.quiz__button.active {
+    background: #7D0808;
+}
+
 .quiz__link {
     text-decoration: none;
     font-size: 18px;
     font-weight: 700;
+}
+
+.cards {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    column-gap: 20px;
+}
+
+.cards-row-4 {
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.cards-row-2 {
+    width: 50%;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    transition: 0.2s;
+    position: relative;
+}
+
+.card__top {
+    flex: 0 0 180px;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    border-radius: 10px;
+}
+
+.card__top > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card__top.selected, .card__top:hover {
+    cursor: pointer;
+    outline: 4px solid #AE0B0B;
+}
+
+.card__circle {
+    position: absolute;
+    bottom: 38px;
+    margin: 0 auto;
+    left: calc(50% - 10px);
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    border: 3px solid #AE0B0B;
+    border-radius: 12px;
+}
+
+.card__top.selected + .card__circle {
+    background-color: #AE0B0B;
+}
+
+.card__title {
+    font-size: 16px;
+    color: #333;
+    text-align: center;
+    margin: 15px 0;
 }
