--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -98,8 +98,13 @@
 .quiz__img {
     position: absolute;
     right: 0;
-    top: -120px;
+    top: 0;
     width: 100%;
+	height: 100%;
+	background:
+		linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),
+		url('/resources/images/background.jpg');
+	background-size: cover;
     z-index: -1;
 }
 
