--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -53,7 +53,7 @@
     cursor: pointer;
 }
 
-.home__ad {
+.adv {
     width: 240px;
     margin-top: 70px;
     padding: 30px 60px 30px 180px;
@@ -62,14 +62,14 @@
     background: rgba(255, 255, 255, .15);
 }
 
-.home__pc {
+.adv__image {
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
 }
 
-.home__ad-text {
+.adv__text {
     font-size: 12px;
     font-weight: 400;
 }
