--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,6 +38,7 @@
 .home__text {
     font-size: 24px;
     margin-top: 50px;
+    margin-bottom: 8px;
     width: 870px;
 }
 
@@ -238,4 +239,69 @@
     color: #333;
     text-align: center;
     margin: 15px 0;
+}
+
+.request__header {
+    font-size: 84px;
+    font-weight: bold;
+}
+
+.form__input {
+    margin-top: 12px;
+    width: 612px;
+    padding: 12px 20px;
+    font-size: 18px;
+    color: white;
+    background: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+    border: 2px solid #ACACAC;
+}
+
+input:-webkit-autofill {
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 1) inset;
+}
+
+.form__file {
+	position: relative;
+	display: inline-block;
+}
+
+.form__file span {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 18px;
+    font-weight: bold;
+	color: white;
+	border-radius: 10px;
+	background-color: #0A717C;
+	padding: 12px 50px;
+	box-sizing: border-box;
+	border: none;
+	outline: none;
+	margin-top: 20px;
+	transition: background-color 0.2s;
+}
+
+.form__file input[type=file] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	display: block;
+	width: 0;
+	height: 0;
+}
+
+.form__file input[type=file]:focus + span {
+	box-shadow: 0 0 0 0.2rem rgba(0, 179, 255, 0.475);
+}
+
+.form__file:hover span {
+	background-color: #2999a5;
+}
+
+.form__file:active span {
+	background-color: #2b5d63;
 }
