--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -213,7 +213,7 @@
     object-fit: cover;
 }
 
-.card__top.selected, .card__top:hover {
+.card__top.checked, .card__top:hover {
     cursor: pointer;
     outline: 4px solid #AE0B0B;
 }
@@ -230,7 +230,7 @@
     border-radius: 12px;
 }
 
-.card__top.selected + .card__circle {
+.card__top.checked + .card__circle {
     background-color: #AE0B0B;
 }
 
