--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -207,6 +207,13 @@
     border-radius: 10px;
 }
 
+.card__radio {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
 .card__top > img {
     width: 100%;
     height: 100%;
