--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -196,7 +196,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 4px;
-    transition: 0.2s;
+    min-width: 165px;
     position: relative;
 }
 
